[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://script/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.407843 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_bottom = 1.0
margin_right = 94.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 5.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 154.0

[node name="Continue" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="Fullscreen" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 83.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
flat = true

[node name="Quit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 83.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
